--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,81 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+  width: 100%;
+  min-height: 400px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #000;
+  color: #FFF;
+}
+
+header > * {
+  margin: 10px;
+}
+
+header .profile {
+  width: 200px;
+  height: 200px;
+
+  border: 2px solid #FFF;
+  border-radius: 100%;
+  overflow: hidden;
+
+  display: flex;
+}
+
+header .profile img {
+  width: 200px;
+  align-self: center;
+}
+
+header .title > * {
+  font-weight: 100;
+}
+
+main {
+  width: 100%;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+main .profile-github {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+main .profile-github a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 20px;
+  padding: 10px;
+  border-radius: 8px;
+  color: #444;
+  text-decoration: none;
+  font-size: 1.2rem;
+
+  transition: background-color 0.4s;
+}
+
+main .profile-github a:hover {
+  background-color: #CCC;
+  color: #000;
+}
+
+main .profile-github a img {
+  width: 26px;
+}
